--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 			</div>
 			<div class="menu_up_icons_els">
 				<div class="menu_up_icon_el"><a href="" class="menu_up_icon_link face_icon"></a></div>
-				<div class="menu_up_icon_el"><a href="" class="menu_up_icon_link twi_icon"></a></div>
-				<div class="menu_up_icon_el"><a href="" class="menu_up_icon_link skype_icon"></a></div>
-				<div class="menu_up_icon_el"><a href="" class="menu_up_icon_link linkedin_icon"></a></div>
+				<div class="menu_up_icon_el"><a href="" class="menu_up_icon_link snap_icon"></a></div>
+				<div class="menu_up_icon_el"><a href="" class="menu_up_icon_link whatsapp_icon"></a></div>
+				<div class="menu_up_icon_el"><a href="" class="menu_up_icon_link youtube_icon"></a></div>
 			</div>
 		</div>
 		<hr class="menu_up_line">
