--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 		<div class="scroll_down_up">
 			<h5 class="h5_scroll_down_up">Scroll Down</h5>
-			<div class="btn_scroll_down_up"></div>
+			<a href="#mainmain" class="btn_scroll_down_up"><i class="btn_arrow_scroll_down_up"></i></a>
 		</div>
 	</header>
 
-	<main>
+	<main id="mainmain">
 		<div class="w_block">
 			<h2 class="h2_wb_block">WE ARE IN AWESOME AGENCY</h2>
 			<div class="features_w_block">
