adding features' block

--- a/index.html
+++ b/index.html
@@ -42,13 +42,41 @@
 	</header>
 
 	<main id="mainmain">
+
 		<div class="w_block">
 			<h2 class="h2_wb_block">WE ARE IN AWESOME AGENCY</h2>
-			<div class="features_w_block">
-				<div class="feature_w_block feature_one"></div>
-				<div class="feature_w_block feature_two"></div>
-				<div class="feature_w_block feature_three"></div>
-				<div class="feature_w_block feature_four"></div>
+			<div class="feature_w_blocks">
+				<div class="feature_w_block feature_one">
+					<div class="icon_feature_w_block icon_feature_one"></div>
+					<h3 class="h3_feature_w_block">Septimus annus est!</h3>
+					<p class="p_feature_w_block">
+						In structuram et confortans progressionem ludit magna munus in formationem patiuntur participationem maioremque systems.
+					</p>
+				</div>
+
+				<div class="feature_w_block feature_two">
+					<div class="icon_feature_w_block icon_feature_two"></div>
+					<h3 class="h3_feature_w_block">Si non erit</h3>
+					<p class="p_feature_w_block">
+						Negotium in ordo, et magnitudo et maxime de location ludit magna munus in formationem virgam disciplina curatores disciplina systema.
+					</p>
+				</div>
+
+				<div class="feature_w_block feature_three">
+					<div class="icon_feature_w_block icon_feature_three"></div>
+					<h3 class="h3_feature_w_block">Et recordabor</h3>
+					<p class="p_feature_w_block">
+						Neque sic tamen, ut obliviscatur operatio novum exemplar concedit pro norma est de rebus editis mandatis ad progressionem exemplar.
+					</p>
+				</div>
+
+				<div class="feature_w_block feature_four">
+					<div class="icon_feature_w_block icon_feature_four"></div>
+					<h3 class="h3_feature_w_block">Et similiter</h3>
+					<p class="p_feature_w_block">
+						Constans apparet tam significationem quaestiones huiusmodi augmentum quantitatis est experimentum docet conpescuit agendis.
+					</p>
+				</div>
 			</div>
 		</div>
 	</main>
