--- a/index.html
+++ b/index.html
@@ -79,6 +79,37 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="blogs">
+			<div class="first_blog blog">
+				<div class="text_part_blog">
+					<h4 class="first_date_blog">Jan 4 2019 | In Culture</h4>
+					<h3 class="h3_first_blog">Aedificium systems</h3>
+					<p class="first_blog_text">
+						Nulla actio nova rursus idem exemplar modernization processus exsequendam ab situs respectu operis participes. Et similiter, incrementum et progressionem curatores disciplina systema analyze nos requirere in structuram et postulata convenit.
+						<br>
+						<br>
+						Doctrinarumque studiis rationis altiorem ordinem, tum quod sit novum exemplar et perficientur norma providet.
+					</p>
+				</div>
+				<div class="img_part_blog img_first_blog"></div>
+			</div>
+
+
+			<div class="second_blog blog">
+				<div class="img_part_blog img_second_blog"></div>
+				<div class="text_part_blog">
+					<h4 class="second_date_blog">Jan 4 2019 | In Culture</h4>
+					<h3 class="h3_second_blog">Missa participationis</h3>
+					<p class="second_blog_text">
+						Rationibus doctrinarum altior ac die opus formationis principium positio ponit exemplum progressionis processum instalar et foveant. Cotidiana experientia ostendit, quod permanens quantitatis incrementum et actiones harum nostram requirere qui statuunt vel curatores.
+						<br>
+						<br>
+						Disciplina systema Si obvium habueris postulata atque humanitate provinciae.
+					</p>
+				</div>
+			</div>
+		</div>
 	</main>
 
 	
