adding strange part

--- a/index.html
+++ b/index.html
@@ -151,6 +151,20 @@
 			</div>
 		</div>
 
+		<div class="str_blocks">
+			<div class="str_block">
+				<div class="str_img str_img_one"></div>
+				<p class="str_p">In opus ordo, quod valuerit, maxime in experimentum temptare structuram ipsius constitutionis est interesting novum instituit. Septimus annus est! et curatores disciplina compage situ requirit identifying positions et declarando capta ab participantium in relatione ad opus.</p>
+			</div>
+
+			<div class="str_block">
+				<div class="str_img str_img_two"></div>
+				<div class="str_p">
+					Item, cum a lata dignissim providet, amplis (artifex) et ponderis ad praesens progressionem exemplar. Et similiter, incrementum et progressionem ad structuram late decernit quod creatio est substantial et administrativi financial condiciones.
+				</div>
+			</div>
+		</div>
+
 
 	</main>
 
