adding phone section

--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
 			</div>
 		</div>
 
+		<div class="iphone_block">
+			<div class="left_iphone_block">
+				<div class="left_iphone_block_text">
+					<h4 class="left_iphone_block_h4">Negotium in ordo</h4>
+					<p class="left_iphone_block_p">Implementation experientia ostendit quod quotidie concedit scuta de te ad valorem estimate de novo instituit. Negotium in ordo, potissimum consulendum est lata de nobis exigit dignissim analyze curatores disciplina systema, et si obvium habueris postulata. Septimus annus est!</p>
+				</div>
+				<div class="left_iphone_block_blocks">
+					<div class="left_iphone_block_block left_iphone_block_first"><h3 class="left_iphone_block_h3">FULLY RESPONSIVE DESIGN</h3></div>
+					<div class="left_iphone_block_block left_iphone_block_second"><h3 class="left_iphone_block_h3">HIGH QUALITY CODE</h3></div>
+					<div class="left_iphone_block_block left_iphone_block_third"><h3 class="left_iphone_block_h3">DIFFERENT HEADERS & LAYOUT</h3></div>
+				</div>
+			</div>
+			<div class="right_iphone_block"></div>
+		</div>
+
 
 	</main>
 
