added (not full) our team part

--- a/index.html
+++ b/index.html
@@ -180,40 +180,36 @@
 			<div class="right_iphone_block"></div>
 		</div>
 
-		<div class="lets_blog_main">
-			<h2 class="h2_lets_blog">LET'S BLOG</h2>
-			<h4 class="h4_blog">We love clean design and advanced digital solutions</h4>
-			<div class="lets_blogs">
-				<div class="lets_blog blog_one">
-					<div class="blog_img blog_img_one"></div>
-					<h3 class="h3_blog">Septimus annus est!</h3>
-					<p class="p_blog">
-						In structuram et confortans progressionem ludit magna munus in formationem patiuntur participationem maioremque systems.
-					</p>
+		<div class="our_team_main">
+			<h2 class="h2_team">OUR TEAM</h2>
+			<h4 class="h4_team">Ergo etc structuram existentium ordinatione apparatus eget</h4>
+			<div class="our_teams">
+				<div class="our_team team_part_one">
+					<div class="podpis">
+						<h3 class="podpis_h3">Vladislav Alexeev</h3>
+						<h4 class="podpis_h4">Hello There</h4>
+					</div>
 				</div>
 
-				<div class="lets_blog blog_two">
-					<div class="blog_img blog_img_two"></div>
-					<h3 class="h3_blog">Si non erit</h3>
-					<p class="p_blog">
-						Negotium in ordo, et magnitudo et maxime de location ludit magna munus in formationem virgam disciplina curatores disciplina systema.
-					</p>
+				<div class="our_team team_part_two">
+					<div class="podpis">
+						<h3 class="podpis_h3">Vladislav Alexeev</h3>
+						<h4 class="podpis_h4">Hello There</h4>
+					</div>
 				</div>
 
-				<div class="lets_blog blog_three">
-					<div class="blog_img blog_img_three"></div>
-					<h3 class="h3_blog">Et recordabor</h3>
-					<p class="p_blog">
-						Neque sic tamen, ut obliviscatur operatio novum exemplar concedit pro norma est de rebus editis mandatis ad progressionem exemplar.
-					</p>
+				<div class="our_team team_part_three">
+					<div class="podpis">
+						<h3 class="podpis_h3">Vladislav Alexeev</h3>
+						<h4 class="podpis_h4">Hello There</h4>
+					</div>
 				</div>
 
-				<div class="lets_blog blog_four">
-					<div class="blog_img blog_img_four"></div>
-					<h3 class="h3_blog">Et similiter</h3>
-					<p class="p_blog">
-						Constans apparet tam significationem quaestiones huiusmodi augmentum quantitatis est experimentum docet conpescuit agendis.
-					</p>
+				<div class="our_team team_part_four">
+					<div class="podpis">
+						<h3 class="podpis_h3">Vladislav Alexeev</h3>
+						<h4 class="podpis_h4">Hello There</h4>
+					</div>
 				</div>
 			</div>
 		</div>
