adding our team final

--- a/index.html
+++ b/index.html
@@ -186,29 +186,29 @@
 			<div class="our_teams">
 				<div class="our_team team_part_one">
 					<div class="podpis">
-						<h3 class="podpis_h3">Vladislav Alexeev</h3>
+						<h3 class="podpis_h3">Vladislav Baby</h3>
 						<h4 class="podpis_h4">Hello There</h4>
 					</div>
 				</div>
 
 				<div class="our_team team_part_two">
 					<div class="podpis">
-						<h3 class="podpis_h3">Vladislav Alexeev</h3>
-						<h4 class="podpis_h4">Hello There</h4>
+						<h3 class="podpis_h3">Don't Hurt</h3>
+						<h4 class="podpis_h4">General Kenobi</h4>
 					</div>
 				</div>
 
 				<div class="our_team team_part_three">
 					<div class="podpis">
-						<h3 class="podpis_h3">Vladislav Alexeev</h3>
-						<h4 class="podpis_h4">Hello There</h4>
+						<h3 class="podpis_h3">Me Don't</h3>
+						<h4 class="podpis_h4">Your move</h4>
 					</div>
 				</div>
 
 				<div class="our_team team_part_four">
 					<div class="podpis">
-						<h3 class="podpis_h3">Vladislav Alexeev</h3>
-						<h4 class="podpis_h4">Hello There</h4>
+						<h3 class="podpis_h3">Hurt me</h3>
+						<h4 class="podpis_h4">Nomore</h4>
 					</div>
 				</div>
 			</div>
