adding your project block

--- a/index.html
+++ b/index.html
@@ -214,6 +214,21 @@
 			</div>
 		</div>
 
+		<div class="your_project">
+			<h2 class="h2_your_project">WE'D LOVE TO HEAR ABOUT YOUR PROJECT.</h2>
+			<div class="your_project_form">
+				<div class="input_up">
+					<textarea type="text" placeholder="Name" class="input_up_input" type="text" name="" id=""></textarea>
+					<textarea type="text" placeholder="Email" class="input_up_input" type="text" name="" id=""></textarea>
+					<textarea type="text" placeholder="Phone" class="input_up_input" type="text" name="" id=""></textarea>
+				</div>
+				<div class="input_down">
+					<textarea type="text" placeholder="Message" type="text" class="input_down_input"></textarea>
+				</div>
+			</div>
+			<a href="" class="your_project_submit"><h3 class="h3_your_project">SUBMIT</h3></a>
+		</div>
+
 
 	</main>
 
