page without adaptive

--- a/index.html
+++ b/index.html
@@ -228,13 +228,14 @@
 			</div>
 			<a href="" class="your_project_submit"><h3 class="h3_your_project">SUBMIT</h3></a>
 		</div>
-
-
 	</main>
 
-	
-
-
+	<footer>
+		<div class="map_footer"></div>
+		<div class="theend">
+			<h5 class="madeby">Made by Well-Wisher</h5>
+		</div>
+	</footer>
 
 	<script> </script>
 </body>
