--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 		<div class="blogs">
 			<div class="first_blog blog">
 				<div class="text_part_blog">
-					<h4 class="first_date_blog">Jan 4 2019 | In Culture</h4>
-					<h3 class="h3_first_blog">Aedificium systems</h3>
-					<p class="first_blog_text">
+					<h4 class="first_date_blog h4_blog_blog">Jan 4 2019 | In Culture</h4>
+					<h3 class="h3_first_blog h3_blog_blog">Aedificium systems</h3>
+					<p class="first_blog_text blog_text">
 						Nulla actio nova rursus idem exemplar modernization processus exsequendam ab situs respectu operis participes. Et similiter, incrementum et progressionem curatores disciplina systema analyze nos requirere in structuram et postulata convenit.
 						<br>
 						<br>
@@ -99,9 +99,9 @@
 			<div class="second_blog blog">
 				<div class="img_part_blog img_second_blog"></div>
 				<div class="text_part_blog">
-					<h4 class="second_date_blog">Jan 4 2019 | In Culture</h4>
-					<h3 class="h3_second_blog">Missa participationis</h3>
-					<p class="second_blog_text">
+					<h4 class="second_date_blog h4_blog_blog">Jan 4 2019 | In Culture</h4>
+					<h3 class="h3_second_blog h3_blog_blog">Missa participationis</h3>
+					<p class="second_blog_text blog_text">
 						Rationibus doctrinarum altior ac die opus formationis principium positio ponit exemplum progressionis processum instalar et foveant. Cotidiana experientia ostendit, quod permanens quantitatis incrementum et actiones harum nostram requirere qui statuunt vel curatores.
 						<br>
 						<br>
